# wgpu_lowrez_engine

./: Cargo.toml
res/: shader.wgsl
src/: lib.rs  lowrez_game.rs  main.rs  texture.rs
src/engine/: asset_handle.rs  camera.rs  engine_handle.rs  game.rs  input.rs  instance.rs  mod.rs  model.rs  pipeline.rs  render_handle.rs  resource_handles.rs  state.rs  texture.rs  texture_array.rs  vertex.rs
src/game/: entity.rs  horizontal_point.rs  lowrez_game.rs  mod.rs
src/game/voxels/: blocks.rs  chunk.rs  cube_mesh.rs  directions.rs  mesh_generator.rs  mod.rs
