[package]
name = "wgpu_lowrez_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.26"
wgpu = "0.13"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.11", features = [ "derive" ] }
image = { version = "0.24", features = [ "png", "jpeg" ] }
cgmath = "0.18"
rand = "0.8"